now uses ZGC and softMaxHeap on jdk17